[gd_scene load_steps=2 format=3 uid="uid://dsgoyifhoqv33"]

[ext_resource type="Script" path="res://Scripts/airplane.gd" id="1_lap3q"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lap3q")

[node name="Arrow" type="Line2D" parent="."]

[node name="LabelContainer" type="Node2D" parent="."]

[node name="CallsignLabel" type="Label" parent="LabelContainer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="InfoLabel" type="Label" parent="LabelContainer"]
offset_right = 40.0
offset_bottom = 23.0
